--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start-dev": "nodemon server/server.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "md-2-json": "^1.0.5",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
