--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "install:reset": "rm -rf node_modules; npm install",
     "build": "webpack",
     "build-dev": "webpack --mode development --watch",
-    "start-dev": "nodemon server/server.js"
+    "start-dev": "nodemon server/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -21,6 +22,7 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-transition-group": "^1.2.1",
+    "supertest": "^4.0.2",
     "victory": "^32.2.2"
   },
   "devDependencies": {
@@ -33,8 +35,8 @@
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
     "path": "^0.12.7",
     "react": "^16.8.6",
