--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
-    "react-transition-group": "^1.2.1",
-    "victory": "^32.2.2"
+    "react-transition-group": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
